objects/Account.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Approved_Date__c</fullName>
        <label>Account Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Account_Email_Subject__c</fullName>
        <formula>Name &amp; 
IF( 
  ISBLANK( CN_Customer_Code__c ),
  &apos;&apos;,
  &apos;-&apos; &amp; CN_Customer_Code__c ) 
&amp; &apos;-&apos; &amp;  Owner.LastName &amp; &apos; &apos; &amp; Owner.FirstName</formula>
        <label>Account Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_FinAR_Email__c</fullName>
        <formula>CN_Sinodis_Finance_AR__r.CN_User_Email__c</formula>
        <label>FinAR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Layer__c</fullName>
        <label>Account Layer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Layer 100</fullName>
                </value>
                <value>
                    <fullName>Layer 80</fullName>
                </value>
                <value>
                    <fullName>Layer 50</fullName>
                </value>
                <value>
                    <fullName>Layer 20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Layer_for_Report__c</fullName>
        <formula>IF(TEXT( CN_Account_Layer__c ) = &quot;&quot;, &quot;Undefined Layer&quot;, TEXT( CN_Account_Layer__c ))</formula>
        <label>Account Layer for Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Not_Uploaded_Contract__c</fullName>
        <formula>CN_Account_Approved_Date__c + 90 &lt;=  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Not Uploaded Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Account_Not_Uploaded_Expect_Contract__c</fullName>
        <formula>CN_Account_Approved_Date__c  + 30 &lt;=  TODAY()</formula>
        <label>Account Not Uploaded Expect Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Account_RecordType__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Source__c</fullName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Recommend</fullName>
                </value>
                <value>
                    <fullName>Cold Visit</fullName>
                </value>
                <value>
                    <fullName>Public Demo</fullName>
                </value>
                <value>
                    <fullName>Brand Activity</fullName>
                </value>
                <value>
                    <fullName>Expositions</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Social Media Network</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Digital Campaign</fullName>
                </value>
                <value>
                    <fullName>Bakery China</fullName>
                </value>
                <value>
                    <fullName>CIIE</fullName>
                </value>
                <value>
                    <fullName>FHC</fullName>
                </value>
                <value>
                    <fullName>Other Trade show</fullName>
                </value>
                <value>
                    <fullName>Sponsorship Event</fullName>
                </value>
                <value>
                    <fullName>Customer Service Hotline</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Status_For_Display__c</fullName>
        <formula>IF( 
  ISBLANK(TEXT(CN_Account_Status_New__c)) ,  
  TEXT(CN_Account_Status__c) , 
  TEXT(CN_Account_Status_New__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status For Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Status_New__c</fullName>
        <label>New Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Acct_Assgmt_Group__c</fullName>
        <defaultValue>&quot;01&quot;</defaultValue>
        <label>Acct assgmt group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Actual_Sales_Volume__c</fullName>
        <label>Actual Sales Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Address__c</fullName>
        <formula>CN_Invoicing_Address_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Aging_Trigger_Datetime__c</fullName>
        <label>Approve Aging Trigger Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Step__c</fullName>
        <label>Approve Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step1</fullName>
                </value>
                <value>
                    <fullName>Step2</fullName>
                </value>
                <value>
                    <fullName>Step3</fullName>
                </value>
                <value>
                    <fullName>Step4</fullName>
                </value>
                <value>
                    <fullName>Step5</fullName>
                </value>
                <value>
                    <fullName>Step6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales MDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_Approver1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesale Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_Approver2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_Approver3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Bank_Account__c</fullName>
        <label>Bank Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Block_Date__c</fullName>
        <label>Billing Block Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Block__c</fullName>
        <label>Billing Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01    Calculation Missing</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02    Compl Confirm Missng</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03    Prices Incomplete</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04    Check Terms of Paymt</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05    Check Terms of Dlv</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>08    Check Credit Memo</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>09    Check Debit Memo</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>YH</fullName>
                    <label>YH    Rejected by Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Billing_Contact_Name_CN_First_Name__c</fullName>
        <label>Billing Contact Name(CN)-First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Contact_Name_CN_Last_Name__c</fullName>
        <label>Billing Contact Name(CN)-Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Contact_Name_EN__c</fullName>
        <label>Billing Contact Name(EN)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Department_of_Contact_Person__c</fullName>
        <label>Billing Department of Contact Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Purchasing Dept</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Sales Dept</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>0003-Administration Dept</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>0004-Production Dept</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>0005-QA Dept</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>0006-Secretary&apos;s Office</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>0007-Financial Dept</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>0008-Legal Dept</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>0009-Human Resources Dept</label>
                </value>
                <value>
                    <fullName>0010</fullName>
                    <label>0010-General Affairs Dept</label>
                </value>
                <value>
                    <fullName>0011</fullName>
                    <label>0011-Sales Promotion Dept</label>
                </value>
                <value>
                    <fullName>0012</fullName>
                    <label>0012-International Dept</label>
                </value>
                <value>
                    <fullName>0013</fullName>
                    <label>0013-Export Dept</label>
                </value>
                <value>
                    <fullName>0014</fullName>
                    <label>0014-Import Dept</label>
                </value>
                <value>
                    <fullName>0015</fullName>
                    <label>0015-Public Relation Dept</label>
                </value>
                <value>
                    <fullName>0016</fullName>
                    <label>0016-Advertising Dept</label>
                </value>
                <value>
                    <fullName>0017</fullName>
                    <label>0017-Planning Dept</label>
                </value>
                <value>
                    <fullName>0018</fullName>
                    <label>0018-R&amp;D Dept</label>
                </value>
                <value>
                    <fullName>0019</fullName>
                    <label>0019-Product Dev. Dept</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020-Food &amp; Beverage Dept</label>
                </value>
                <value>
                    <fullName>0021</fullName>
                    <label>0021-Service Dept</label>
                </value>
                <value>
                    <fullName>0022</fullName>
                    <label>0022-Technical Support</label>
                </value>
                <value>
                    <fullName>0023</fullName>
                    <label>0023-IT Dept</label>
                </value>
                <value>
                    <fullName>0024</fullName>
                    <label>0024-Logistics Dept</label>
                </value>
                <value>
                    <fullName>0025</fullName>
                    <label>0025-Cold Kitchen</label>
                </value>
                <value>
                    <fullName>0026</fullName>
                    <label>0026-Hot Kitchen</label>
                </value>
                <value>
                    <fullName>0027</fullName>
                    <label>0027-Banquet Kitchen</label>
                </value>
                <value>
                    <fullName>0028</fullName>
                    <label>0028-Pastry</label>
                </value>
                <value>
                    <fullName>0029</fullName>
                    <label>0029-Backery</label>
                </value>
                <value>
                    <fullName>0030</fullName>
                    <label>0030-Bar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Billing Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Billing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Block_Date__c</fullName>
        <formula>if(ISBLANK(CN_Order_Block_Date__c) &amp;&amp; ISBLANK(CN_Delivery_Block_Date__c) &amp;&amp; !ISBLANK(CN_Billing_Block_Date__c),CN_Billing_Block_Date__c,
	if(ISBLANK(CN_Order_Block_Date__c) &amp;&amp; !ISBLANK(CN_Delivery_Block_Date__c) &amp;&amp; ISBLANK(CN_Billing_Block_Date__c),CN_Delivery_Block_Date__c,
		if(!ISBLANK(CN_Order_Block_Date__c) &amp;&amp; ISBLANK(CN_Delivery_Block_Date__c) &amp;&amp; ISBLANK(CN_Billing_Block_Date__c),CN_Order_Block_Date__c,
			if(!ISBLANK(CN_Order_Block_Date__c) &amp;&amp; !ISBLANK(CN_Delivery_Block_Date__c) &amp;&amp; ISBLANK(CN_Billing_Block_Date__c),
				if(CN_Order_Block_Date__c&lt;CN_Delivery_Block_Date__c,CN_Order_Block_Date__c,CN_Delivery_Block_Date__c),
			if(!ISBLANK(CN_Order_Block_Date__c) &amp;&amp; ISBLANK(CN_Delivery_Block_Date__c) &amp;&amp; !ISBLANK(CN_Billing_Block_Date__c),
				if(CN_Order_Block_Date__c&lt;CN_Billing_Block_Date__c,CN_Order_Block_Date__c,CN_Billing_Block_Date__c),
			if(ISBLANK(CN_Order_Block_Date__c) &amp;&amp; !ISBLANK(CN_Delivery_Block_Date__c) &amp;&amp; !ISBLANK(CN_Billing_Block_Date__c),
				if(CN_Delivery_Block_Date__c&lt;CN_Billing_Block_Date__c,CN_Delivery_Block_Date__c,CN_Billing_Block_Date__c),
			if(!ISBLANK(CN_Order_Block_Date__c) &amp;&amp; !ISBLANK(CN_Delivery_Block_Date__c) &amp;&amp; !ISBLANK(CN_Billing_Block_Date__c),
				if(CN_Order_Block_Date__c &lt; CN_Delivery_Block_Date__c,
					if(CN_Order_Block_Date__c&lt;CN_Billing_Block_Date__c,CN_Order_Block_Date__c,CN_Billing_Block_Date__c),
					if(CN_Delivery_Block_Date__c&lt;CN_Billing_Block_Date__c,CN_Delivery_Block_Date__c,CN_Billing_Block_Date__c)),null)))))))</formula>
        <label>Block Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Block_Sales_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Sales Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Brand_API__c</fullName>
        <formula>CN_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>2 OR (1 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.CN_Group_Name__c</field>
                <operation>equals</operation>
                <valueField>CN_Brand__c.CN_Group__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.CN_Is_Integration_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>CN_Brand__c.CN_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CN_Brand__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Business_License__c</fullName>
        <label>Business License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please search for Food Service.</inlineHelpText>
        <label>Business Unit</label>
        <referenceTo>CN_Business_Unit__c</referenceTo>
        <relationshipLabel>Business Units</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit__c</fullName>
        <formula>CN_Business_Unit_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Cash_Mgmt_Group__c</fullName>
        <defaultValue>&quot;Z2&quot;</defaultValue>
        <label>Cash Mgmt Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAPA</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Coffee/Tea Shop</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Retailor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Chain__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please input number of stores for chain customer.</inlineHelpText>
        <label>Chain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Change_Request__c</fullName>
        <label>Change Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_City_CN_API__c</fullName>
        <formula>CN_City_CN__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City(CN) API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_City_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City(CN)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>CN_City__c.CN_Province__c</field>
                <operation>equals</operation>
                <valueField>$Source.CN_Province_CN__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.CN_Is_Integration_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CN_City__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_City_Code__c</fullName>
        <formula>CN_City_CN__r.CN_City_Code__c</formula>
        <label>City Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_City_EN__c</fullName>
        <formula>CN_City_CN__r.CN_City_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City(EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Competitors__c</fullName>
        <label>Competitors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Change_Request_Id__c</fullName>
        <label>Contact Change Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Contact Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Name_CN_First_Name__c</fullName>
        <label>Contact Name(CN)-First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Name_CN_Last_Name__c</fullName>
        <label>Contact Name(CN)-Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Name_EN__c</fullName>
        <label>Contact Name(EN)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Converted_From__c</fullName>
        <label>Converted From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Country_CN__c</fullName>
        <label>Country(CN)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CN</fullName>
                    <default>true</default>
                    <label>中国</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Country_EN__c</fullName>
        <label>Country(EN)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Credit_Term_Application_Status__c</fullName>
        <label>Credit Term Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CN_Current_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Cust_Pric_Proc__c</fullName>
        <defaultValue>&quot;3&quot;</defaultValue>
        <label>Cust.pric.proc.</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Cust_Stats_Grp__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Cust.Stats.Grp</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <externalId>true</externalId>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Customer_Group__c</fullName>
        <formula>CASE(CN_Category__c, 
&quot;Hotel&quot;,&quot;01&quot;,
&quot;Restaurant&quot;,&quot;02&quot;,
&quot;Catering&quot;,&quot;03&quot;,
&quot;International Chain&quot;,&quot;04&quot;,
&quot;Local Chain&quot;,&quot;05&quot;,
&quot;Department Stores&quot;,&quot;06&quot;,
&quot;Pastry/Bakery/Ice cr&quot;,&quot;07&quot;,
&quot;Expat Stores&quot;,&quot;08&quot;,
&quot;Convenient stores&quot;,&quot;09&quot;,
&quot;Distributor Retail&quot;,&quot;10&quot;,
&quot;Distributor Corporat&quot;,&quot;11&quot;,
&quot;Wholesale Market&quot;,&quot;12&quot;,
&quot;Employee&quot;,&quot;13&quot;,
&quot;Internet sales&quot;,&quot;14&quot;,
&quot;Personal sales&quot;,&quot;15&quot;,
&quot;Distributor Food Ser&quot;,&quot;16&quot;,
&quot;Supply Chain&quot;,&quot;17&quot;,
&quot;Food Logistic Servic&quot;,&quot;18&quot;,
&quot;Supply Chain and Foo&quot;,&quot;19&quot;,
&quot;Key Account&quot;,&quot;20&quot;,
&quot;Distributor Retail &amp;&quot;,&quot;21&quot;,
&quot;Gourmet Shop&quot;,&quot;22&quot;,
&quot;Other&quot;,&quot;23&quot;,
&quot;FS1&quot;,&quot;24&quot;,
&quot;FS2&quot;,&quot;25&quot;,
&quot;FS3&quot;,&quot;26&quot;,
&quot;DEPARTMENT STORES &amp;&quot;,&quot;27&quot;,
&quot;BAPA&quot;,&quot;30&quot;,
&quot;Coffee/Tea Shop&quot;,&quot;31&quot;,
&quot;OEM&quot;,&quot;32&quot;,
&quot;EC&quot;,&quot;33&quot;,
&quot;Wholesaler&quot;,&quot;34&quot;,
&quot;Retailor&quot;,&quot;35&quot;,
&quot;&quot;)</formula>
        <label>Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Journey__c</fullName>
        <label>Customer Journey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                    <default>true</default>
                    <label>Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Status__c</fullName>
        <formula>IF( 
  ISBLANK(CN_Latest_Order_Create_Date__c) ,
  NULL,
  IF(
    TODAY() &lt; ADDMONTHS(CN_Latest_Order_Create_Date__c,3) ,
    &quot;Active&quot; ,
    IF(TODAY() &lt;  ADDMONTHS(CN_Latest_Order_Create_Date__c,6),&quot;Sleep&quot;,&quot;Dead&quot;)
  )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Type__c</fullName>
        <defaultValue>&quot;0001-Sold to party&quot;</defaultValue>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Sold to party</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Goods Receipt</label>
                </value>
                <value>
                    <fullName>CPDA</fullName>
                    <label>CPDA-Onetime Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Block_Date__c</fullName>
        <label>Delivery Block Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Delivery_Block__c</fullName>
        <label>Delivery Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 Credit limit</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 Waitting confirm</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 Bottleneck material</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04 Export papers missng</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05 Check free of ch.dlv</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>06 No printing</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>07 Change in quantity</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>08 Kanban Delivery</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>09 JIT delivery (PDS)</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 Not achieve MOQ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>